--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0"
+    "ethers": "^6.15.0",
+    "express": "^5.1.0",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
